--- a/pages/results.html
+++ b/pages/results.html
@@ -1,5 +1,14 @@
 
 <header>
-  <h1 class="results__heading">2 tours</h1>
-  <p class="shifted-subtile">3 Adults, 2 Children, 1 Day</p>
+  <h1 class="capitalize__heading">2 tours</h1>
+  <p class="shifted-to-the-right tagline">3 Adults, 2 Children, 1 Day</p>
+  <div class="tour-cards-container">
+    <div class="tour-card">
+      <div class="tour-card__push-down"></div>
+      <div class="tour-card__info-container">
+        <div class="tour-card__title">full day city tour</div><a class="tour-card__learn-more-button" href="#">learn more</a>
+      </div>
+      <div class="tour-card__bg-blur"></div><img class="tour-card__bg-image" src="https://images.unsplash.com/photo-1551446591-142875a901a1?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=750&amp;q=80"/>
+    </div>
+  </div>
 </header>
